# InferD

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.generated.yml  generate_docker_compose.py  hello.py  node_service_pb2.pyi  pyproject.toml  run.sh  split_model.py
dashboard/: dashboard.py  test_data.json
dstar/: dstarlite.py  priority_queue.py  test.py
grpc/: node_service.proto  node_service_client.py  node_service_pb2.py  node_service_pb2_grpc.py  node_service_server.py
models/qwen3/: client.py  distributed_qwen.ipynb  qwen3_config.py  qwen3_service.proto  server.py
models/qwen3/client/: client.py  rpc_client.py
models/qwen3/proto/: qwen3.proto  qwen3_pb2.py  qwen3_pb2_grpc.py
models/qwen3/server/: qwen3_server_module.py  server.py
petals/: Dockerfile  balance.py  chain_rpc_client.py  client.py  config.py  dht_util.py  docker-compose.yml  inferd.yaml  kademlia_client.py  main.py  metrics.ipynb  node.py  node_info.py  partitioned_models.py  partitioned_session.py  path_finder.py  pyproject.toml  qwen.py  rpc_client.py  run_node.py  send_message.py  split_model.py  stages.py  task.py  task_scheduler.py  test.py  test_path_finding.py  test_rebalance.py  test_utils.py  utils.py
petals/models/qwen3/: simple_test.py
petals/models/qwen3/proto/: qwen3.proto  qwen3_pb2.py  qwen3_pb2_grpc.py
petals/models/qwen3/server/: qwen3_server_module.py  server.py
support_donotneeedrealtrash/: vesagruzim.ipynb
swarm/: config.py  kademlia_client.py  kademlia_server.py  node.py  rebalancing.py  stochastic_wiring.py  test.py
