[project]
name = "inferd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "heapdict>=1.0.1",
    "ipykernel>=6.29.5",
    "kademlia",
    "matplotlib>=3.10.1",
    "torch>=2.6.0",
    "transformers>=4.52.4",
    "wandb>=0.19.9",
]
